# animepahe-dl-desktop

./: .env.example  .gitignore  Cargo.toml  PRIVACY.md  README.md  README_DESKTOP.md  architecture.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: pr-build-test.yml  release.yml
requirements/: FFMPEG.md  NodeJS.md  OpenSSL.md
scripts/: fetch-ffmpeg.mjs  fetch-secrets.mjs  update-version.mjs
src/: App.tsx  api.rs  api.ts  download.rs  main.rs  main.tsx  scrape.rs  tailwind.css  types.ts  ui.rs  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  download.rs  download_tracker.rs  library.rs  main.rs  player.rs  scrape.rs  settings.rs  video_server.rs
src/components/: AnalyticsDashboard.tsx  AnimeCard.tsx  BatchDownloadProgress.tsx  DuplicateWarning.tsx  EpisodeListDialog.tsx  ErrorBoundary.tsx  LibraryView.tsx  NotificationSettingsDialog.tsx  NotificationToast.tsx  RequirementsDialog.tsx  ResumeDownloadsDialog.tsx  ResumeNotificationBanner.tsx  SettingsDropdown.tsx  SplashScreen.tsx  UpdateDialog.tsx
src/components/tour/: TourOverlay.tsx  TourProvider.tsx  TourTooltip.tsx  tourSteps.ts
src/components/ui/: autocomplete.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  switch.tsx
src/contexts/: NotificationContext.tsx
src/core/animepahe/: api.ts
src/core/queue/: QueueManager.ts  index.ts  useQueueManager.ts
src/core/store/: index.ts  library-store.ts  network-store.ts  player-store.ts  preference-store.ts  queue-store.ts  types.ts
src/core/types/: index.ts
src/core/utils/: episodeSpec.ts  format.ts  index.ts  tauri.ts
src/hooks/: useDownloadNotifications.ts  useDuplicateDetection.ts
src/lib/: analytics-utils.ts  posthog.tsx
src/screens/download/: DownloadScreen.tsx
src/screens/episodes/: EpisodesScreen.tsx
src/screens/home/: HomeScreen.tsx
src/screens/player/: PlayerScreen.tsx
src/screens/search/: SearchScreen.tsx
src/screens/settings/: SettingsScreen.tsx
src/screens/title/: TitleScreen.tsx
src/ui/components/base/: ImageWithProxy.tsx  alert.tsx  autocomplete.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  segmented.tsx  select.tsx  separator.tsx  sheet.tsx  switch.tsx  tabs.tsx
src/ui/components/content/: ContentRow.tsx  EpisodeDownloadDialog.tsx  EpisodeRow.tsx  HeroCarousel.tsx  PlayerControls.tsx  PosterCard.tsx  VideoPlayer.tsx
src/ui/contexts/: ChromeSlots.tsx
src/ui/hooks/: useAutoResumeDetection.ts  useBreakpoint.ts  useDownloadNotifications.ts  useDuplicateDetection.ts  useTour.ts
src/ui/layouts/: AppChrome.tsx
src/utils/: updateChecker.ts
(+6 files in other folders)
