[package]
name = "animepahe-dl-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11", features = ["gzip", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.19"
regex = "1"
rand = "0.8"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
open = "5"
which = "6"
dirs = "5"
futures = "0.3"
urlencoding = "2"
percent-encoding = "2"
sanitize-filename = "0.5"
hex = "0.4"
rfd = "0.14"

[patch.crates-io]
icrate = { path = "vendor/icrate-0.0.4" }

[features]
default = []
js_eval = [] # future: embed a JS engine instead of Node

[profile.dev]
debug-assertions = false
