[package]
name = "animepahe-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8.3", features = [] }
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "sync"] }
reqwest = { version = "0.11", features = ["gzip", "json", "stream"] }
scraper = "0.19"
regex = "1"
rand = "0.8"
which = "6"
open = "5"
dirs = "5"
urlencoding = "2"
percent-encoding = "2"
sanitize-filename = "0.5"
hex = "0.4"
futures = "0.3"
rfd = "0.14"
winit = "0.30.12"
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }
objc2-foundation = "0.2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
