[package]
name = "animepahe-tauri"
version = "0.3.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "sync"] }
reqwest = { version = "0.11", features = ["gzip", "json", "stream"] }
scraper = "0.19"
regex = "1"
rand = "0.8"
which = "6"
open = "5"
dirs = "5"
urlencoding = "2"
percent-encoding = "2"
sanitize-filename = "0.5"
hex = "0.4"
futures = "0.3"
rfd = "0.14"
boa_engine = "0.17"
base64 = "0.21"
aes = "0.8"
cbc = "0.1"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30.12"
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }
objc2-foundation = "0.2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
